--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="homeStyle.css">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
