--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
                 <button>See My Project</button>
             </section>
             
-            <aside class="image_area">
-                <img class="quarter_shape_img" src="assets/personal.jpg" alt="profile image">
+            <aside>
+                <div class="image-container">
+                    <img class="quarter_shape_img" src="assets/personal.jpg" alt="profile image">
+                </div>
             </aside>
         </main>
     </body>
