--- a/index.html
+++ b/index.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Seba Portfolio</title>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&family=Poppins:wght@400;600;700;900&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        <header>
-            <nav>
-                <a href="#"><i class="material-icons" id="navIcon">home</i>Home</a>
-                <a href="#"><i class="material-icons" id="navIcon">person</i>About Me</a>
-                <a href="#"><i class="material-icons" id="navIcon">call</i>Contact Me</a>
-            </nav>
-        </header>
-        
-        <main>
-            <section class="information_section">
-                <p id="secondary_text">Welcome to my site</p>
-                <h1>Hi I'm Seba, <br>a <strong>Frontend Developer</strong></h1>
-                <p id="additional_text">I'm a freshly graduated Computer Engineer,
-                    <br>professional with a strong work ethic and a passion for developing websites and mobile apps.
-                    <br> I am known for my patience, creativity, and teamwork.<a href="#">See More...</a>
-                </p>
-                <button>Hire Me !</button>
-                <button>See My Project</button>
-            </section>
-            
-            <aside>
-                <div class="image-container">
-                    <img class="quarter_shape_img" src="assets/personal.jpg" alt="profile image">
-                </div>
-            </aside>
-        </main>
-    </body>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Seba Portfolio</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&family=Poppins:wght@400;600;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header>
+        <nav>
+            <a href="#"><i class="material-icons" id="navIcon">home</i>Home</a>
+            <a href="#"><i class="material-icons" id="navIcon">person</i>About Me</a>
+            <a href="#"><i class="material-icons" id="navIcon">call</i>Contact Me</a>
+        </nav>
+    </header>
+
+    <main>
+        <section class="information_section">
+            <p id="secondary_text">Welcome to my site</p>
+            <h1>Hi I'm Seba, <br>a <strong>Frontend Developer</strong></h1>
+            <p id="additional_text">I'm a freshly graduated Computer Engineer,
+                <br>professional with a strong work ethic and a passion for developing websites and mobile apps.
+                <br> I am known for my patience, creativity, and teamwork.<a href="#">See More...</a>
+            </p>
+            <button>Hire Me !</button>
+            <button>See My Project</button>
+        </section>
+
+        <aside>
+            <div class="image-container">
+                <img class="quarter_shape_img" src="assets/personal.jpg" alt="profile image">
+            </div>
+        </aside>
+    </main>
+</body>
+
 </html>
